Fixed: align cog-icon to center.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -71,7 +71,6 @@ nav .logo {
   color: white;
   text-align: center;
   font-size: 2rem;
-  /* margin: 3.5rem 0; */
 }
 
 .balance {
@@ -80,7 +79,7 @@ nav .logo {
 
 .dropup-container {
   position: relative;
-  width: 7rem;
+  width: 100%;
 }
 
 .dropup-content {
